<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/derive_keystore_tip_title"
        android:textColor="@color/derive_keystore_tip_text_color"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/derive_keystore_tip"
        android:textColor="@color/load_wallet_tip_text_color"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/derive_keystore_tip_title2"
        android:textColor="@color/derive_keystore_tip_text_color"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/derive_keystore_tip"
        android:textColor="@color/load_wallet_tip_text_color"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/derive_keystore_tip_title3"
        android:textColor="@color/derive_keystore_tip_text_color"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/derive_keystore_tip3"
        android:textColor="@color/load_wallet_tip_text_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_keystore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@drawable/mnemonic_backup_bg"
        android:padding="9dp"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/btn_copy"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/create_wallet_btn_bg_selector"
        android:gravity="center"
        android:text="@string/derive_keystore_copy"
        android:textColor="@color/white" />

</LinearLayout>