<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/derive_keystore_tip_title4"
        android:textColor="@color/derive_keystore_tip_text_color"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/derive_keystore_tip4"
        android:textColor="@color/load_wallet_tip_text_color"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/derive_keystore_tip_title5"
        android:textColor="@color/derive_keystore_tip_text_color"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/derive_keystore_tip5"
        android:textColor="@color/load_wallet_tip_text_color"
        android:textSize="12sp" />


    <ImageView
        android:id="@+id/iv_keystore"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:src="@drawable/qrcode_cover"
        android:background="@drawable/mnemonic_backup_bg"
         />


</LinearLayout>