<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar_with_txbtn" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/wallet_backup_tips1"
        android:textColor="@color/discovery_application_text_color"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/wallet_backup_tips2"
        android:textColor="@color/property_ico_worth_color"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/btn_backup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:background="@color/transfer_advanced_setting_help_text_color"
        android:gravity="center"
        android:text="@string/wallet_backup_backup_btn"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/btn_backup_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/wallet_backup_backup_help"
        android:textColor="@color/transfer_advanced_setting_help_text_color"
        android:textSize="12sp"
        android:visibility="gone"/>

</LinearLayout>